# moltres

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LOW_PRIORITY_IMPLEMENTATION_SUMMARY.md  MOLTRES_VS_PYSPARK_COMPARISON.md  Makefile  PRIORITY_IMPLEMENTATION.md  README.md  coverage.json  pyproject.toml  todo.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  benchmark.py
docs/: BEST_PRACTICES.md  BUSINESS_CASE.md  CONTRIBUTING.md  DEBUGGING.md  DEPLOYMENT.md  EXAMPLES.md  FAQ.md  IMPROVE_PYTEST_GREEN_LIGHT.md  MIGRATION_GUIDE.md  MIGRATION_SPARK.md  MOLTRES_VS_IBIS_COMPARISON.md  MOLTRES_VS_PYSPARK_COMPARISON.md  MOLTRES_VS_SQLFRAME_COMPARISON.md  OPS_RUNBOOKS.md  PERFORMANCE.md  PERFORMANCE_SLA.md  PRIORITY_IMPLEMENTATION.md  PROJECT_CHARTER.md  PROJECT_SCOPE_STATEMENT.md  PYDANTABLE_ENGINE.md  PYSPARK_FEATURE_COMPARISON.md  PYSPARK_INTERFACE_AUDIT.md  PYSPARK_MIGRATION_INCONSISTENCIES.md  README.md  RELEASE_PROCESS.md  RUNTIME_MATRIX.md  RUNTIME_SUPPORT.md  SECURITY.md  SQLALCHEMY_INTEGRATION.md  TESTING.md  TEST_HARNESSES.md  TROUBLESHOOTING.md  WHY_MOLTRES.md  blog_post.docx  blog_post.md  conf.py  docs_audit.md  index.md  index.rst  integration_features_plan.md  (+5 more)
docs/api/: dataframe.rst  engine.rst  expressions.rst  table.rst
docs/example_data/: data.json
docs/example_output/: products.json  products.jsonl  products.parquet  products_custom.csv
docs/examples/: 01_connecting.py  02_dataframe_basics.py  03_async_dataframe.py  04_joins.py  05_groupby.py  06_expressions.py  07_file_reading.py  08_file_writing.py  09_table_operations.py  10_create_dataframe.py  11_window_functions.py  12_sql_operations.py  13_transactions.py  14_reflection.py  15_pandas_polars_dataframes.py  16_ux_features.py  17_sqlalchemy_models.py  18_pandas_interface.py  19_polars_interface.py  20_sqlalchemy_integration.py  20_transaction_control.py  21_sqlmodel_integration.py  21_transaction_utilities.py  22_fastapi_integration.py  23_django_integration.py  25_streamlit_integration.py  26_pytest_integration.py  27_airflow_integration.py  28_prefect_integration.py  29_dbt_integration.py  30_sql_output_demo.py  README.md
docs/guides/: advanced-topics.md  best-practices.md  common-patterns.md  dbt-integration.md  django-integration.md  error-handling.md  getting-started.md  migrating-from-pandas.md  migrating-from-pyspark.md  pandas-interface.md  performance-optimization.md  polars-interface.md  pytest-integration.md  sqlalchemy-integration.md  sqlmodel-integration.md  streamlit-integration.md  workflow-integration.md
example_output/: expensive_products.json
examples/: 01_connecting.py  03_async_dataframe.py  04_joins.py  05_groupby.py  06_expressions.py  07_file_reading.py  08_file_writing.py  09_table_operations.py  10_create_dataframe.py  11_window_functions.py  12_sql_operations.py  13_transactions.py  14_reflection.py  15_pandas_polars_dataframes.py  16_ux_features.py  17_sqlalchemy_models.py  18_pandas_interface.py  20_sqlalchemy_integration.py  22_fastapi_integration.py  23_fastapi_integration_utilities.py  25_streamlit_integration.py  26_pytest_integration.py  28_prefect_integration.py  README.md
examples/dbt_example_project/: README.md
guides/: 01-getting-started.md  02-migrating-from-pandas.md  03-migrating-from-pyspark.md  04-performance-optimization.md  05-common-patterns.md  06-error-handling.md  07-advanced-topics.md  08-best-practices.md  09-pandas-interface.md  10-polars-interface.md  11-sqlalchemy-integration.md  12-sqlmodel-integration.md  13-django-integration.md  14-streamlit-integration.md  15-pytest-integration.md  16-workflow-integration.md  17-dbt-integration.md  18-sql-approaches-comparison.md  19-transaction-control.md  20-transaction-utilities.md  README.md
moltres-core/: README.md  pyproject.toml
moltres-core/src/moltres_core/: __init__.py  config.py  engine.py  plan.py
moltres-core/src/moltres_core/embedded_protocol/: __init__.py  protocols.py
moltres-core/src/moltres_core/sql/: __init__.py  async_connection.py  async_execution.py  connection.py  execution.py  transaction_state.py
notebooks/: KERNEL_SETUP.md  README.md  ecommerce_analytics_demo.ipynb  fix_basket_analysis.py  fix_cell_types.py  fix_notebook.py  fix_notebook_manual.py  fix_notebook_queries.py  test_notebook.py
scripts/: add_all_guide_outputs.py  add_all_outputs.py  add_guide_outputs.py  add_outputs_comprehensive.py  find_missing_docstrings.py  make_guides_runnable.py  pre_commit_ci_checks.py  update_docstrings_for_rtd.py  update_example_outputs.py  validate_examples.py
src/moltres/: __init__.py  config.py
tests/: conftest.py  pytest_parallel_support.py  test_imports.py  test_moltres_core_engine_surface.py  test_pydantable_moltres_integration.py  test_session_support.py
tests/config/: test_env_config.py
tests/dataframe/: test_advanced_features.py  test_agg_string.py  test_async_dataframe.py  test_async_dataframe_attributes.py  test_async_dataframe_comprehensive.py  test_async_explode_pivot_recursive_cte.py  test_async_groupby_comprehensive.py  test_async_groupby_helpers.py  test_async_integration.py  test_async_mysql_features.py  test_async_postgresql_features.py  test_async_reader.py  test_async_writer_comprehensive.py  test_dataframe_attributes.py  test_dataframe_operations.py  test_dataframe_ux.py  test_duckdb_features.py  test_edge_cases.py  test_execution.py  test_explode_function.py  test_filter_string.py  test_groupby_pivot.py  test_join_comprehensive.py  test_json_reader_edge_cases.py  test_multidb.py  test_mysql_features.py  test_new_feature_parity.py  test_new_features.py  test_pandas_interface.py  test_polars_interface.py  test_postgresql_features.py  test_pyspark_join_syntax.py  test_reader.py  test_select_expr.py  test_select_for_update_fixes.py  test_select_star.py  test_snake_case_aliases.py  test_sql_method.py  test_streaming.py  test_writer.py  (+2 more)
tests/engine/: test_async_connection_comprehensive.py  test_async_execution.py  test_async_timeout.py  (+6 more)
(+233 files in other folders)
