[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltres"
version = "0.4.0"
description = "PySpark-like DataFrame API that compiles to SQL"
readme = "README.md"
authors = [{name = "Odos Matthews", email = "odosmatthews@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "SQLAlchemy>=2.0",
  "typing-extensions>=4.5",
]

[project.urls]
Homepage = "https://github.com/eddiethedean/moltres"
Repository = "https://github.com/eddiethedean/moltres"
Issues = "https://github.com/eddiethedean/moltres/issues"

[project.optional-dependencies]
polars = ["polars>=1.0"]
pandas = ["pandas>=2.1"]
async = ["aiofiles>=23.0"]
async-postgresql = ["asyncpg>=0.29.0"]
async-mysql = ["aiomysql>=0.2.0"]
async-sqlite = ["aiosqlite>=0.19.0"]

dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "ruff>=0.6",
    "pre-commit>=3.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Focus on essential checks for Python 3.9+ compatibility
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade (ensures Python 3.9+ syntax)
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "UP045",  # Use X | None - requires Python 3.10+, we support 3.9+
    "UP007",  # Use X | Y - requires Python 3.10+, we support 3.9+
]

[tool.setuptools]
packages = {find = {where = ["src"], exclude = ["tests*", "*.tests", "*.tests.*"]}}

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "moltres.dataframe.async_writer",
    "moltres.dataframe.readers.async_*",
]
warn_unused_ignores = false

[tool.moltres]
default_dialect = "ansi"
