[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltres"
version = "0.5.0"
description = "DataFrame API with SQL pushdown execution and real SQL CRUD - the missing layer for SQL in Python"
readme = "README.md"
authors = [{name = "Odos Matthews", email = "odosmatthews@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "dataframe",
    "sql",
    "crud",
    "pushdown",
    "etl",
    "data-engineering",
    "sqlalchemy",
    "pandas",
    "polars",
    "spark",
    "database",
    "query-builder",
]
dependencies = [
  "SQLAlchemy>=2.0",
  "typing-extensions>=4.5",
]

[project.urls]
Homepage = "https://github.com/eddiethedean/moltres"
Repository = "https://github.com/eddiethedean/moltres"
Issues = "https://github.com/eddiethedean/moltres/issues"

[project.optional-dependencies]
polars = ["polars>=1.0"]
pandas = ["pandas>=2.1"]
async = ["aiofiles>=23.0", "greenlet>=3.0.0"]
async-postgresql = ["aiofiles>=23.0", "asyncpg>=0.29.0", "greenlet>=3.0.0"]
async-mysql = ["aiofiles>=23.0", "aiomysql>=0.2.0", "greenlet>=3.0.0"]
async-sqlite = ["aiofiles>=23.0", "aiosqlite>=0.19.0", "greenlet>=3.0.0"]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "ruff>=0.6",
    "pre-commit>=3.5",
    "pandas>=2.1",
    "polars>=1.0",
    "pyarrow>=10.0",
    "aiofiles>=23.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.setuptools]
packages = {find = {where = ["src"], exclude = ["tests*", "*.tests", "*.tests.*"]}}

[tool.setuptools.package-dir]
"" = "src"

[tool.moltres]
default_dialect = "ansi"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_error_context = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "scripts.*",
]
ignore_errors = true

# Note: pyarrow type stubs are provided in stubs/pyarrow/
# The stubs directory is automatically discovered by mypy
