[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltres"
version = "0.17.0"
description = "DataFrame API with SQL pushdown execution and real SQL CRUD - the missing layer for SQL in Python"
readme = "README.md"
authors = [{name = "Odos Matthews", email = "odosmatthews@gmail.com"}]
license = "MIT"
requires-python = ">=3.9"
keywords = [
    "dataframe",
    "sql",
    "crud",
    "pushdown",
    "etl",
    "data-engineering",
    "sqlalchemy",
    "pandas",
    "polars",
    "spark",
    "database",
    "query-builder",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
  "SQLAlchemy>=2.0",
  "typing-extensions>=4.5",
]

[project.urls]
Homepage = "https://github.com/eddiethedean/moltres"
Repository = "https://github.com/eddiethedean/moltres"
Issues = "https://github.com/eddiethedean/moltres/issues"

[project.optional-dependencies]
polars = ["polars>=1.0"]
pandas = ["pandas>=2.1"]
async = ["aiofiles>=23.0", "greenlet>=3.0.0"]
async-postgresql = ["aiofiles>=23.0", "asyncpg>=0.29.0", "greenlet>=3.0.0"]
async-mysql = ["aiofiles>=23.0", "aiomysql>=0.2.0", "greenlet>=3.0.0"]
async-sqlite = ["aiofiles>=23.0", "aiosqlite>=0.19.0", "greenlet>=3.0.0"]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1",
    "pytest-green-light>=0.2.0",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "ruff>=0.6",
    "pre-commit>=3.5",
    "pandas>=2.1",
    "pandas-stubs>=2.1",
    "polars>=1.0",
    "pyarrow>=10.0",
    "aiofiles>=23.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "testing.postgresql>=1.3.0",
    "testing.mysqld>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "duckdb-engine>=0.9.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "postgres: marks tests as requiring PostgreSQL database",
    "mysql: marks tests as requiring MySQL database",
    "multidb: marks tests that run against multiple databases",
    "integration: marks tests as integration tests (end-to-end workflows)",
    "slow: marks tests as slow (may take longer to run)",
]

[tool.coverage.run]
source = ["src/moltres"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@property",
    "class .*\\bProtocol\\):",
    "raise.*NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]  # Allow imports not at top for educational examples
"notebooks/*.ipynb" = ["F821"]  # Notebooks have variables defined across cells

[tool.setuptools]
packages = {find = {where = ["src"], exclude = ["tests*", "*.tests", "*.tests.*"]}}

[tool.setuptools.package-dir]
"" = "src"

[tool.moltres]
default_dialect = "ansi"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_error_context = true
mypy_path = "tests/stubs"

[[tool.mypy.overrides]]
module = "tests.examples.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "benchmarks.*",
    "scripts.*",
]
ignore_errors = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

# Note: pyarrow type stubs are provided in tests/stubs/pyarrow/
# The stubs directory is automatically discovered by mypy via mypy_path
